# advent-of-code-2023-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: data.rs  lib.rs  main.rs  math_utils.rs  new_day.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs
templates/: _template_day.rs  _template_test.rs
tests/: test_day01.rs  test_day02.rs  test_day03.rs  test_day04.rs  test_day05.rs  test_day06.rs  test_day07.rs  test_day08.rs  test_day09.rs  test_day10.rs  test_day11.rs  test_day12.rs  test_day13.rs  test_day14.rs  test_day15.rs  test_day16.rs  test_day17.rs  test_day18.rs  test_day19.rs  test_day20.rs  test_day21.rs  test_day22.rs
