[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0.50"
textwrap = "0.16.0"
log = "0.4.20"
env_logger = "0.10.1"
uuid = { version = "1.5.0", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.10.2"
itertools = "0.12.0"
linked_hash_set = "0.1.4"
num = "0.4.1"
petgraph = "0.6.4"
ndarray = "0.15.6"
cached = "0.46.1"
strum = { version = "0.25", features = ["derive", "strum_macros"] }
strum_macros = "0.25"
hex = "0.4.3"
